--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -176,7 +176,9 @@
             android:background="#3CF1EBF1"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="4dp">
+            android:padding="4dp"
+            android:clickable="true"
+            >
 
             <ImageView
                 android:id="@+id/sportImage"
