--- a/app/src/main/res/layout/contact_layout.xml
+++ b/app/src/main/res/layout/contact_layout.xml
@@ -65,8 +65,7 @@
                     android:layout_marginStart="0dp"
                     android:layout_marginTop="0dp"
                     app:srcCompat="@drawable/green_online_24dp"
-                    android:visibility="visible"/>
-
+                    android:visibility="invisible"/>
                 </LinearLayout>
 
                 <LinearLayout
